demo/comparison/deloyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: sample-app
spec:
 replicas: 3
 selector:
   matchLabels:
     app: sample-app
 template:
   metadata:
     labels:
       app: sample-app
   spec:
     containers:
     - name: sample-app
       image: nginx:latest
       ports:
       - containerPort: 80
